--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Github Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main", "feat/**/*"]
+    branches: ['main', 'feat/**/*']
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -16,7 +16,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: true
 
 jobs:
