--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false,
   "singleQuote": true,
   "endOfLine": "lf",
   "tabWidth": 2
