--- a/package.json
+++ b/package.json
@@ -6,7 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint 'src/**/*.{js,jsx}' --cache --quiet",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier 'src/**/*.{js,jsx}' --write",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\" && husky install && npx husky set .husky/pre-commit 'npx lint-staged'"
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx|cjs)": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ],
+    "*.+(css|scss|sass)": [
+      "prettier --write"
+    ],
+    "*.+(html)": [
+      "prettier --write"
+    ],
+    "*.+(md)": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +35,15 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "vite": "^4.1.0"
   }
 }
